<resources>
    <string name="app_name">PatCoffe App</string>
    <string name="quantity">Quantity</string>
    <string name="decrease">-</string>
    <string name="zero">0</string>
    <string name="increase">+</string>
    <string name="price">price</string>
    <string name="dollars">$10</string>
    <string name="submit_order">Submit Order</string>
    <string name="about_coffee">PatCoffApp app gives its users the ability to mobile order and pay for drinks in advance, track rewards and send gift cards. It also has a store locator and a US only feature where you can discover what music is playing inside the stores. Awesome</string>
</resources>
